--- a/index3.html
+++ b/index3.html
@@ -17,10 +17,10 @@
     <div align="center">
       <table>
         <tr class="row">
-          <th class="title col-xs-12">Pierrepont School</th>
+          <th class="title col-xs-12">Schoolio</th>
         </tr>
         <tr class="row">
-          <th id="name" class="col-xs-12 col-md-6">Hagen Feeney</th>
+          <th id="name" class="col-xs-12 col-md-6">Ageen Fini</th>
           <th id="year" class="col-xs-12 col-md-6">2019-2020</th>
         </tr>
     <div align="center" class="container-fluid">
