--- a/responsive.html
+++ b/responsive.html
@@ -17,12 +17,12 @@
     <div class="container">
       <div class="row border">
         <div class="col-xs-12 text-center free">
-          <h1 id="school">Pierrepont</h1>
+          <h1 id="school">Schoolio</h1>
         </div>
       </div>
       <div class="row border">
         <div class="col-xs-6 text-left">
-          <h3>Hagen Feeney</h3>
+          <h3>Ageen Fini</h3>
         </div>
         <div class="col-xs-6 text-right">
           <h3>2019-2020</h3>
